<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that the speaker is lightly blocked. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this 2-5 times while shaking your device with the speaker facing downwards.\n\nWARNING: Ensure that headphones are unplugged</string>

    <!-- Popup camera -->
    <string name="popup_title">Front camera settings</string>
    <string name="popup_summary">Led light and sound options</string>
    <string name="popup_led_title">Camera LED</string>
    <string name="popup_led_summary">Enable LED light while the front camera appears and retracts</string>
    <string name="popup_sound_title">Sound effect</string>
    <string name="popup_sound_none">Disabled</string>
    <string name="popup_sound_muqin">Xylophone</string>
    <string name="popup_sound_yingyan">Condor</string>
    <string name="popup_sound_mofa">Magic</string>
    <string name="popup_sound_jijia">Mecha</string>
    <string name="popup_sound_chilun">Gearwheel</string>
    <string name="popup_sound_cangmen">Cabin door</string>
    <string name="popup_camera_tip">Warning</string>
    <string name="popup_camera_takeback_failed_times_calibrate">Couldn\'t close front camera multiple times. Try calibrating the camera</string>
    <string name="popup_camera_popup_failed_times_calibrate">Couldn\'t open front camera multiple times. Try calibrating the camera</string>
    <string name="popup_camera_calibrate_running">Front camera cannot be used during calibration.</string>
    <string name="popup_camera_calibrate_now">Calibrate</string>
    <string name="popup_camera_calibrate_failed">Couldn\'t calibrate</string>
    <string name="popup_camera_calibrate_success">Calibrated successfully. You can open the front camera now</string>
    <string name="stop_operate_camera_frequently">You\'re opening the front camera too frequently</string>
    <string name="takeback_camera_front_failed">Couldn\'t close front camera. Try again</string>
    <string name="popup_camera_front_failed">Couldn\'t open front camera. Try again</string>
    <string name="popup_led_color_title">LED color</string>
    <string name="popup_led_color_blue">Blue</string>
    <string name="popup_led_color_cyan">Cyan</string>
    <string name="popup_led_color_green">Green</string>
    <string name="popup_led_color_purple">Purple</string>
    <string name="popup_led_color_red">Red</string>
    <string name="popup_led_color_yellow">Yellow</string>
    <string name="popup_led_color_white">White</string>

</resources>
